tests/checker/diagnostics/0960_gadt_pair_constructor_payload_mismatch_10.ml
type _ pair_box_kappa =
  | Pair_kappa : int * bool -> (int * bool) pair_box_kappa
  | Swap_kappa : bool * int -> (bool * int) pair_box_kappa

let _ : (int * bool) pair_box_kappa = Pair_kappa (true, 9)
